Analyzer uses freqdist to analyze most common words, stringparser cleans text.

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
 			var nodes = {};
 
 // Compute the distinct nodes from the links.
+// TODO: 
 			links.forEach(function(link) {
 			  link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
 			  link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
