--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 	<title>OMG BIGRAMS!</title>
 	<style>
 
-		.node {
+		/*.node {
 			fill: #ccc;
 			stroke-width: 2px;
-		}
+		}*/
 
 		.link.prez-speech {
 		  fill: none;
@@ -21,6 +21,11 @@
 			stroke-dasharray: 0,2 2;
 		}
 
+		.circle.prez {
+			fill: none;
+			border: 1px;
+		}
+
 		text {
 		  fill: blue;
 		  font: 10px sans-serif;
@@ -30,7 +35,7 @@
 	</style>
 </head>
 	<body>
-		<!-- <h2>Drink iced tea.</h2> -->
+		<!-- <h2>Insert title here.</h2> -->
 		<script src='http://d3js.org/d3.v3.min.js'></script>
 		<script>
 		d3.json('/data.json', function(data) {
@@ -41,8 +46,14 @@
 
 // Compute the distinct nodes from the links.
 			links.forEach(function(link) {
-			  link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
-			  link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
+			  link.source = nodes[link.source] || (nodes[link.source] = {
+			  	name: link.source,
+			  	type: link.type === 'prez-speech' ? 'prez' : 'speech'
+			  });
+			  link.target = nodes[link.target] || (nodes[link.target] = {
+			  	name: link.target,
+			  	type: link.type === 'speech-bigram' ? 'bigram' : 'speech'
+			  });
 			});
 
 			// console.log(nodes);
@@ -63,7 +74,7 @@
 			    .attr("width", width)
 			    .attr("height", height);
 
-// Per-type markers, as they don't inherit styles.
+
 			svg.append("defs").selectAll("marker")
 			    .data(['prez-speech', 'speech-bigram'])
 			  .enter().append("marker")
@@ -83,24 +94,13 @@
 			    .attr("class", function(d) { return "link " + d.type; })
 			    .attr("marker-end", function(d) { return "url(#" + d.type + ")"; });
 
+			var sizes = {'prez': 16, 'speech': 4, 'bigram': 6}
+
 			var circle = svg.append("g").selectAll("circle")
 			    .data(force.nodes())
 			  .enter().append("circle")
-			    .attr("r", function(d){
-			    	switch (d.name) {
-			    		case 'George W. Bush':
-			    			return 10;
-			    			break;
-			    		case 'Lyndon B. Johnson':
-			    			return 10;
-			    			break;
-			    		case 'Barack Obama':
-			    			return 10;
-			    			break;
-			    		default:
-			    			return 4;
-			    	}
-			    })
+			  	.attr("id", function(d) { return d.type; })
+			    .attr("r", function(d){ return sizes[d.type]; })
 			    .call(force.drag);
 
 			var text = svg.append("g").selectAll("text")
