--- a/templates/index.html
+++ b/templates/index.html
@@ -36,102 +36,86 @@
 </head>
 	<body>
 		<!-- <h2>Insert title here.</h2> -->
-		<script src='http://d3js.org/d3.v3.min.js'></script>
+		<svg width="500" height="500"></svg>
+		<script src='http://d3js.org/d3.v4.min.js'></script>
+		
 		<script>
-		d3.json('/data.json', function(data) {
 
-			var links = data.paths;
+		var svg = d3.select("svg"),
+		    width = +svg.attr("width"),
+		    height = +svg.attr("height");
 
-			var nodes = {};
+		// var color = d3.scaleOrdinal(d3.schemeCategory20);
 
-// Compute the distinct nodes from the links.
-			links.forEach(function(link) {
-			  link.source = nodes[link.source] || (nodes[link.source] = {
-			  	name: link.source,
-			  	type: link.type === 'prez-speech' ? 'prez' : 'speech'
-			  });
-			  link.target = nodes[link.target] || (nodes[link.target] = {
-			  	name: link.target,
-			  	type: link.type === 'speech-bigram' ? 'bigram' : 'speech'
-			  });
-			});
+		var simulation = d3.forceSimulation()
+		    .force("link", d3.forceLink().id(function(d) { return d.id; }))
+		    .force("charge", d3.forceManyBody())
+		    .force("center", d3.forceCenter(width / 2, height / 2));
 
-			// console.log(nodes);
+		d3.json("/data.json", function(error, graph) {
+		  if (error) throw error;
 
-			var width = 900,
-			    height = 900;
+		  var link = svg.append("g")
+		      .attr("class", "links")
+		    .selectAll("line")
+		    .data(graph.links)
+		    .enter().append("line")
+		      .attr("class", function(d) { return "link " + d.type; })
+		      .attr("marker-end", function(d) { return "url(#" + d.type + ")"; });
+		      // .attr("stroke-width", '1px');
 
-			var force = d3.layout.force()
-			    .nodes(d3.values(nodes))
-			    .links(links)
-			    .size([width, height])
-			    .linkDistance(60)
-			    .charge(-300)
-			    .on("tick", tick)
-			    .start();
+		  var node = svg.append("g")
+		      .attr("class", "nodes")
+		    .selectAll("circle")
+		    .data(graph.nodes)
+		    .enter().append("circle")
+		      .attr("r", 5)
+		      .attr("fill", "blue")
+		      .call(d3.drag()
+		          .on("start", dragstarted)
+		          .on("drag", dragged)
+		          .on("end", dragended));
 
-			var svg = d3.select("body").append("svg")
-			    .attr("width", width)
-			    .attr("height", height);
+		  node.append("title")
+		      .text(function(d) { return d.id; });
 
+		  simulation
+		      .nodes(graph.nodes)
+		      .on("tick", ticked);
 
-			svg.append("defs").selectAll("marker")
-			    .data(['prez-speech', 'speech-bigram'])
-			  .enter().append("marker")
-			    .attr("id", function(d) { return d; })
-			    .attr("viewBox", "0 -5 10 10")
-			    .attr("refX", 15)
-			    .attr("refY", -1.5)
-			    .attr("markerWidth", 6)
-			    .attr("markerHeight", 6)
-			    .attr("orient", "auto")
-			  .append("path")
-			    .attr("d", "M0,-5L10,0L0,5");
+		  simulation.force("link")
+		      .links(graph.links);
 
-			var path = svg.append("g").selectAll("path")
-			    .data(force.links())
-			  .enter().append("path")
-			    .attr("class", function(d) { return "link " + d.type; })
-			    .attr("marker-end", function(d) { return "url(#" + d.type + ")"; });
+		  function ticked() {
+		    link
+		        .attr("x1", function(d) { return d.source.x; })
+		        .attr("y1", function(d) { return d.source.y; })
+		        .attr("x2", function(d) { return d.target.x; })
+		        .attr("y2", function(d) { return d.target.y; });
 
-			var sizes = {'prez': 16, 'speech': 4, 'bigram': 6}
-
-			var circle = svg.append("g").selectAll("circle")
-			    .data(force.nodes())
-			  .enter().append("circle")
-			  	.attr("id", function(d) { return d.type; })
-			    .attr("r", function(d){ return sizes[d.type]; })
-			    .call(force.drag);
-
-			var text = svg.append("g").selectAll("text")
-			    .data(force.nodes())
-			  .enter().append("text")
-			    .attr("x", 8)
-			    .attr("y", ".31em")
-			    .text(function(d) { return d.name; });
-
-			// Use elliptical arc path segments to doubly-encode directionality.
-			function tick() {
-			  path.attr("d", linkArc);
-			  circle.attr("transform", transform);
-			  text.attr("transform", transform);
-			}
-
-			function linkArc(d) {
-			  var dx = d.target.x - d.source.x,
-			      dy = d.target.y - d.source.y,
-			      dr = Math.sqrt(dx * dx + dy * dy);
-			  return "M" + d.source.x + "," + d.source.y + "A" + dr + "," + dr + " 0 0,1 " + d.target.x + "," + d.target.y;
-			}
-
-			function transform(d) {
-			  return "translate(" + d.x + "," + d.y + ")";
-			}
-
+		    node
+		        .attr("cx", function(d) { return d.x; })
+		        .attr("cy", function(d) { return d.y; });
+		  }
 		});
 
-			/////////////////////
-		
+		function dragstarted(d) {
+		  if (!d3.event.active) simulation.alphaTarget(0.3).restart();
+		  d.fx = d.x;
+		  d.fy = d.y;
+		}
+
+		function dragged(d) {
+		  d.fx = d3.event.x;
+		  d.fy = d3.event.y;
+		}
+
+		function dragended(d) {
+		  if (!d3.event.active) simulation.alphaTarget(0);
+		  d.fx = null;
+		  d.fy = null;
+		}
 		</script>
+
 	</body>
 </html>
