--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 </head>
 	<body>
 		<!-- <h2>Insert title here.</h2> -->
-		<svg width="500" height="500"></svg>
+		<svg width="800" height="600"></svg>
 		<script src='http://d3js.org/d3.v4.min.js'></script>
 		
 		<script>
@@ -53,31 +53,39 @@
 		    .force("center", d3.forceCenter(width / 2, height / 2));
 
 		d3.json("/data.json", function(error, graph) {
-		  if (error) throw error;
+			if (error) throw error;
 
-		  var link = svg.append("g")
-		      .attr("class", "links")
-		    .selectAll("line")
-		    .data(graph.links)
-		    .enter().append("line")
-		      .attr("class", function(d) { return "link " + d.type; })
-		      .attr("marker-end", function(d) { return "url(#" + d.type + ")"; });
+		  	var link = svg.append("g")
+			    .attr("class", "links")
+			    .selectAll("line")
+			    .data(graph.links)
+			    .enter().append("line")
+			    .attr("class", function(d) { return "link " + d.type; })
+			    .attr("marker-end", function(d) { return "url(#" + d.type + ")";  });
 		      // .attr("stroke-width", '1px');
 
-		  var node = svg.append("g")
-		      .attr("class", "nodes")
-		    .selectAll("circle")
-		    .data(graph.nodes)
-		    .enter().append("circle")
-		      .attr("r", 5)
-		      .attr("fill", "blue")
-		      .call(d3.drag()
-		          .on("start", dragstarted)
-		          .on("drag", dragged)
-		          .on("end", dragended));
+			var node = svg.append("g")
+			    .attr("class", "nodes")
+			    .selectAll("circle")
+			    .data(graph.nodes)
+			    .enter().append("circle")
+			    .attr("r", 5)
+			    .attr("fill", "blue")
+			    .call(d3.drag()
+		        	.on("start", dragstarted)
+			        .on("drag", dragged)
+			        .on("end", dragended));
 
 		  node.append("title")
 		      .text(function(d) { return d.id; });
+
+		  
+		var text = svg.append("g").selectAll("text")
+                .data(graph.nodes)
+              .enter().append("text")
+                .attr("x", 8)
+                .attr("y", ".31em")
+                .text(function(d) { return d.name; });
 
 		  simulation
 		      .nodes(graph.nodes)
@@ -96,7 +104,17 @@
 		    node
 		        .attr("cx", function(d) { return d.x; })
 		        .attr("cy", function(d) { return d.y; });
+		  //   d3.selectAll("circle").attr("cx", function (d) {
+    //     return d.x;
+    // })
+    //     .attr("cy", function (d) {
+    //     return d.y;
+    // });
+			text
+				.attr("x", function (d) { return d.x; })
+        		.attr("y", function (d) { return d.y; });
 		  }
+
 		});
 
 		function dragstarted(d) {
