Removed hanging bigram nodes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 </head>
 	<body>
 		<!-- <h2>Insert title here.</h2> -->
-		<svg width="800" height="600"></svg>
+		<svg width="800" height="800"></svg>
 		<script src='http://d3js.org/d3.v4.min.js'></script>
 		
 		<script>
@@ -68,7 +68,7 @@
 		    var sizes = {1: 16, 2: 8, 3: 4, 4: 4, 5: 5}
 
 		    var cirColor = {
-		    	1: 'none',
+		    	1: 'blue',
 		    	2: 'grey',
 		    	3: 'green',
 		    	4: 'orange', 
