--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -7,6 +7,20 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.css' type='text/css'>
     </head>
 
+    <style>
+
+    .vis-item.jfk {
+        color: blue;
+        background-color: white;
+        border-color: darkred;
+    }
+
+    .vis-item.ghwb {
+        color: yellow;
+        background-color: black;
+        border-color: pink;
+    }
+    </style>
 <body>
 
     <div id='timeline'></div>
