--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -5,23 +5,60 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.js"></script>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.css' type='text/css'>
-    </head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href='https://color.adobe.com/Gettysburg-color-theme-209416/' rel='stylesheet' type='text/html'>
+    <link href="https://fonts.googleapis.com/css?family=Cabin:400,500|Source+Sans+Pro:600,700" rel="stylesheet">
 
-    <style>
+</head>
 
-    .vis-item.jfk {
-        color: blue;
-        background-color: white;
-        border-color: darkred;
-    }
+<style>
 
-    .vis-item.ghwb {
-        color: yellow;
-        background-color: black;
-        border-color: pink;
-    }
-    </style>
+.navbar-default {
+    background-color: #348899;
+}
+
+.navbar-default .navbar-brand {
+    color: #F2EBC7;
+}
+
+.vis-item.jfk {
+    color: blue;
+    background-color: white;
+    border-color: darkred;
+}
+
+.vis-item.ghwb {
+    color: yellow;
+    background-color: black;
+    border-color: pink;
+}
+</style>
+
 <body>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <p class="navbar-brand">Feeling Presidential</p>
+    </div>
+
+    <!-- Collect the nav links for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/index">Collocations</li><span class="sr-only">(current)</span></a></li>
+        <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container -->
+</nav>
 
     <div id='timeline'></div>
 
@@ -32,7 +69,7 @@
             success: function (data) {
                 var container = $('#timeline')[0];
                 var items = new vis.DataSet(data.items);
-                console.log(items);
+                // console.log(items);
                 var groups = new vis.DataSet(data.groups)
                 var options = {};    //
                 var prezTimeline = new vis.Timeline(container, items, 
