Fixed issue with 2 speeches having incorrect date in timeline.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,10 @@
 	color: #F2EBC7;
 }
 
+body {
+    background-color: #F2EBC7;
+}
+
 .link.prez-speech {
 	fill: none;
   	stroke: #343642;
@@ -120,7 +124,7 @@ text {
 	    	4: 'rgb(232,93,115)', 
 	    	5: 'rgb(150,45,62)'}
 
-	    var sizes = {1: 16, 2: 8, 3: 2, 4: 2, 5: 2}
+	    var sizes = {1: 16, 2: 5, 3: 3, 4: 3, 5: 3}
 
 	    var cirColor = {
 	    	1: 'white',
