Changed text output on timeline to reflect prez names.

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -26,7 +26,7 @@ body {
     background-color: #F2EBC7;
 }
 
-.vis-item.jfk {
+/*.vis-item.jfk {
     color: blue;
     background-color: white;
     border-color: darkred;
@@ -68,7 +68,7 @@ body {
 
 .vis-item.bama {
 
-}
+}*/
 
 </style>
 
