--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,17 @@
 
 <style>	
 .navbar-default {
-	background-color: #348899;
+	background-color: #962D3E;
 }
 
 .navbar-default .navbar-brand {
 	color: #F2EBC7;
+	font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 600;
 }
 
 body {
-    background-color: #F2EBC7;
+    background-color: #979C9C;
 }
 
 .link.prez-speech {
@@ -28,8 +30,8 @@ body {
 
 .link.speech-bigram {
 	fill: none;
-	stroke: #979C9C;
-	stroke-dasharray: 0,2 2;
+	stroke: #343642;
+	stroke-width: 1.5px;
 }
 
 .node1 {
@@ -119,18 +121,18 @@ text {
 
 	    var color = {
 	    	1: 'rgb(52,54,66)',
-	    	2: 'rgb(151,156,156)',
+	    	2: 'rgb(52,136,153)',
 	    	3: 'rgb(47,156,68)',
-	    	4: 'rgb(232,93,115)', 
+	    	4: 'rgb(52,54,66)', 
 	    	5: 'rgb(150,45,62)'}
 
 	    var sizes = {1: 16, 2: 5, 3: 3, 4: 3, 5: 3}
 
 	    var cirColor = {
 	    	1: 'white',
-	    	2: 'rgb(151,156,156)',
+	    	2: 'rgb(52,136,153)',
 	    	3: 'rgb(47,156,68)',
-	    	4: 'rgb(232,93,115)', 
+	    	4: 'rgb(52,54,66)', 
 	    	5: 'rgb(150,45,62)' }
 
 		var node = svg.append("g")
