--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,64 @@
 }
 
 .navbar-default .navbar-brand {
-	color: #F2EBC7;
+	color: #343642;
 	font-family: 'Source Sans Pro', sans-serif;
     font-weight: 600;
+    font-size: 30px
+}
+
+#navbar-text {
+	color: white;
+	font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
 }
 
 body {
-    background-color: #979C9C;
+    background-color: #F2EBC7;
+}
+
+h3 {
+	font-family: 'Source Sans Pro', sans-serif;
+}
+.legend {
+ 	list-style: none;
+}
+
+.legend li {
+	float: left;
+	margin-right: 10px;
+	font-family: 'Cabin', sans-serif;
+	font-size: 14px;
+}
+
+.legend span {
+	border: 1px solid white;
+	float: left;
+	width: 12px;
+	height: 12px;
+	margin: 2px;
+
+}
+
+.legend .prez {
+	background-color: rgb(52,54,66);
+}
+
+.legend .title {
+	background-color: rgb(30,79,89);
+}
+
+.legend .pos {
+	background-color: rgb(91,227,116);
+}
+
+.legend .neut {
+	background-color: rgb(43,113,127);
+}
+
+.legend .neg {
+	background: rgb(150,45,62);
 }
 
 .link.prez-speech {
@@ -65,7 +116,7 @@ text {
 
     <!-- Collect the nav links for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" id='navbar-text'>
         <li><a href="/index">Collocations</li><span class="sr-only">(current)</span></a></li>
         <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
       </ul>
@@ -74,11 +125,17 @@ text {
 </nav>
    
 
-<h2>Insert title here.</h2>
-<div class='container' id='legend'>
+<h3>Most common repeated phrases</h3>
+<div class='container' id='legend-box'>
 	<div class='row'>
-		<div class='col-xs-4 col-md-4 col-lg-4'
-		<p>Legendary!</p>
+		<div class='col-xs-4 col-md-4 col-lg-4'>
+		<ul class='legend'>
+			<li><span class='legend prez'></span>President</li>
+			<li><span class='legend title'></span>(I) Inaugural or (SoU) State of the Union</li>
+			<li><span class='legend pos'></span>Positive phrase</li>
+			<li><span class='legend neut'></span>Neutral phrase</li>
+			<li><span class='legend neg'></span>Negative phrase</li>
+		</ul>
 	</div>
 </div>
 
@@ -121,18 +178,18 @@ text {
 
 	    var color = {
 	    	1: 'rgb(52,54,66)',
-	    	2: 'rgb(52,136,153)',
-	    	3: 'rgb(47,156,68)',
-	    	4: 'rgb(52,54,66)', 
+	    	2: 'rgb(30,79,89)',
+	    	3: 'rgb(91,227,116)',
+	    	4: 'rgb(43,113,127)', 
 	    	5: 'rgb(150,45,62)'}
 
 	    var sizes = {1: 16, 2: 5, 3: 3, 4: 3, 5: 3}
 
 	    var cirColor = {
 	    	1: 'white',
-	    	2: 'rgb(52,136,153)',
-	    	3: 'rgb(47,156,68)',
-	    	4: 'rgb(52,54,66)', 
+	    	2: 'rgb(30,79,89)',
+	    	3: 'rgb(91,227,116)',
+	    	4: 'rgb(43,113,127)', 
 	    	5: 'rgb(150,45,62)' }
 
 		var node = svg.append("g")
