Added sample data to db for testing.

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -36,6 +36,14 @@ body {
     background-color: #F2EBC7;
 }
 
+h3 {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+#timeline {
+    border: 5px solid black;
+}
+
 .vis-timeline {
     border: 2px #343642;
     font-family: 'Cabin', sans-serif;
@@ -105,7 +113,8 @@ body {
   </div><!-- /.container -->
 </nav>
 
-    <div id='timeline'></div>
+<h3>Overall Sentiment of Presidential Speeches</h3>    
+<div id='timeline'></div>
 
     <script type='text/javascript'>
 
